Observers agregados a las dos variantes de la vista de Asesores